# CHIP-8-Emulator

./: .gitignore  CMakeLists.txt  README.md  README.org  readme
code/: TEST.ch8  tmp
docs/: wikipedia_chip8.html
include/: chip8.h  chip8assembler.h  chip8processor.h  utils.h
src/: chip8.cpp  chip8assembler.cpp  chip8assembly.cpp  chip8disassembler.cpp  chip8emulator.cpp  chip8processor.cpp
